# fastapi_project

./: .coverage  .gitignore  database.db  pyproject.toml
fastapi_curso/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 2e261960c4c6_create_users_table.py  32db2e9da0fd_att_updated_at_to_users.py  567ed692605e_add_updated_at_to_users.py  7661724f2189_add_updated_at_to_users.py  93ea8b4727bd_exercicio_02_aula_04.py  9c9b103d04cf_exercicio_02_aula_04.py  9e2cbd82380f_create_users_table.py  a6d06851656a_att_updated_at_to_users.py  bd7d828e9894_add_updated_at_to_users.py  c073f19b4981_add_updated_at_to_users.py
tests/: test_app.py  test_db.py
